--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: go
 go:
-  - "1.12"
   - "1.13"
+  - "1.14"
   - "tip"
 
 addons:
@@ -12,7 +12,7 @@ services:
 
 install:
   - go install github.com/hexya-erp/hexya
-  - npm install less -g
+  - npm install sass -g
 
 before_script:
   - hexya generate -t .
